Update Find Commands to use strict matching